--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -1,6 +1,7 @@
 name: Build and publish Python distributions to PyPI and TestPyPI
 
-on: workflow_dispatch
+on:
+  workflow_dispatch:
 
 jobs:
   build-n-publish:
