--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -1,7 +1,7 @@
 name: Build and publish Python distributions to PyPI and TestPyPI
 
 on:
-  workflow_dispatch:
+  push:
 
 jobs:
   build-n-publish:
