--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -1,7 +1,7 @@
-name: Build and publish Python distributions to PyPI and TestPyPI
+name: (Manual) Build and publish Python distributions to PyPI and TestPyPI
 
 on:
-  push:
+  workflow_dispatch:
 
 jobs:
   build-n-publish:
